style: 💄 fix overflow

--- a/src/ui/components/Navbar/style.scss
+++ b/src/ui/components/Navbar/style.scss
@@ -28,6 +28,7 @@ $root: '.navbarPage';
 			}
 		}
 		.uiIcon {
+			cursor: pointer;
 			position: relative;
 			margin-left: auto;
 			margin-right: 15px;
